syntax = "proto3";

import "service/types.proto";

package hub.backoffice.peppermint;

option go_package = "peppermint/service/backoffice/hub";

message JoinHello {
  message Request {
    bytes dh_pub_key = 1; // Diffie-Hellman public key of a joining node
  }
  message Response {
    bytes dh_pub_key = 2; // Hub's DH public key
  }
}

message Join {
  message Request {
    string join_secret = 3;
  }
  message Response {

  }
}